2005-09-09  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add two bugs to the 1.0.2 roadmap:
	 4408 Missing dashes on stroked curves
	 4409 Dashes are missing initial caps

2005-09-08  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Add open bug list for 1.0.2.

2005-09-07  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Put win32 mutex locking on the 1.2.0 roadmap.

	Portability improvements for win32 thanks to Hans Breuer
	<hans@breuer.org>:
	
	* pixman/src/pixman.h: Defined sized-integer types when under the
	influence of _MSC_VER and without stdint.h.
	
	* src/cairoint.h: Use #error which is more portable than #warning,
	(and more indicative of where we want to be before the next
	release).

2005-09-07  Carl Worth  <cworth@cworth.org>

	* src/cairo-features.h.in: Give cairo_public an empty definition
	by default.
	
	* src/cairo-ft.h:
	* src/cairo-glitz.h:
	* src/cairo-pdf.h:
	* src/cairo-ps.h:
	* src/cairo-quartz.h:
	* src/cairo-win32.h:
	* src/cairo-xcb-xrender.h:
	* src/cairo-xcb.h:
	* src/cairo-xlib-xrender.h:
	* src/cairo-xlib.h:
	* src/cairo.h: Add new cairo_public macro before every public
	function call prototype.

2005-09-07  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c (_cairo_atsui_font_show_glyphs):
	Pass appropriate pointer for image_extra to release_dest_image.

2005-09-07  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c (_cairo_atsui_font_show_glyphs):
	Pass scratch space instead of NULL for image_extra to
	acquire/release_dest_image.

2005-09-06  Carl Worth  <cworth@cworth.org>

	* src/.cvsignore: Ignore cairo.def.
	
	* src/cairo-gstate.c: Remove cairo_private since we only use it in
	.h files, not .c files.

2005-09-02  Carl Worth  <cworth@cworth.org>

	* ROADMAP: Make a very preliminary attempt at 1.0.2, 1.2.0, and
	1.4.0 roadmaps.

2005-09-02  Carl Worth  <cworth@cworth.org>

	* doc/public/tmpl/cairo-version.sgml: Add description of cairo's
	versioning scheme.

2005-09-02  Carl Worth  <cworth@cworth.org>
